added commit daisy ui

--- a/index.html
+++ b/index.html
@@ -98,21 +98,51 @@
             </div>
           </div> 
           <div id="slide2" class="carousel-item relative w-full">
-            <img src="/images/slider/bike2.png" class="w-full" />
+            <div class="flex lg:p-24 p-4 gap-20 flex-1 flex-col lg:flex-row">
+              <div class="space-y-7">
+                <h2 class="text-7xl font-bold text-black">Ride-on R15 V4 <br> with Smile</h2>
+                <p class="text-black text-2xl">Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <button class="btn text-white bg-btn-bike">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="/images/slider/bike2.png" class="w-[440px]" />
+              </div>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide1" class="btn btn-circle">❮</a> 
               <a href="#slide3" class="btn btn-circle">❯</a>
             </div>
           </div> 
           <div id="slide3" class="carousel-item relative w-full">
-            <img src="/images/slider/bike3.png" class="w-full" />
+            <div class="flex lg:p-24 p-4 gap-20 flex-1 flex-col lg:flex-row">
+              <div class="space-y-7">
+                <h2 class="text-7xl font-bold text-black">Ride-on R15 V4 <br> with Smile</h2>
+                <p class="text-black text-2xl">Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <button class="btn text-white bg-btn-bike">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="/images/slider/bike3.png" class="w-[440px]" />
+              </div>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide2" class="btn btn-circle">❮</a> 
               <a href="#slide4" class="btn btn-circle">❯</a>
             </div>
           </div> 
           <div id="slide4" class="carousel-item relative w-full">
-            <img src="/images/slider/bike4.png" class="w-full" />
+            <div class="flex lg:p-24 p-4 gap-20 flex-1 flex-col lg:flex-row">
+              <div class="space-y-7">
+                <h2 class="text-7xl font-bold text-black">Ride-on R15 V4 <br> with Smile</h2>
+                <p class="text-black text-2xl">Amet minim mollit non deserunt ullamco 
+                  est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
+                  <button class="btn text-white bg-btn-bike">Purchase</button>
+              </div>
+              <div class="flex-1">
+                <img src="/images/slider/bike4.png" class="w-[440px]" />
+              </div>
+            </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide3" class="btn btn-circle">❮</a> 
               <a href="#slide1" class="btn btn-circle">❯</a>
