added text part

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <div id="slide1" class="carousel-item relative w-full">
             <div class="flex lg:p-24 p-4 gap-20 flex-1 flex-col lg:flex-row">
               <div class="space-y-7">
-                <h2 class="text-7xl font-bold text-black">Ride-on R15 V4 <br> with Smile</h2>
+                <h2 class="lg:text-7xl text-2xl font-bold text-black">Ride-on R15 V4 <br> with Smile</h2>
                 <p class="text-black text-2xl">Amet minim mollit non deserunt ullamco 
                   est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</p>
                   <button class="btn text-white bg-btn-bike">Purchase</button>
@@ -141,7 +141,8 @@
               </div>
               <div class="flex-1">
                 <img src="/images/slider/bike4.png" class="w-[440px]" />
-              </div>
+              </div> 
+            
             </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
               <a href="#slide3" class="btn btn-circle">❮</a> 
