--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   <button class="btn text-white bg-btn-bike">Purchase</button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike1.png" class="w-[440px]" />
+                <img src="./images/slider/bike1.png" class="w-[440px]" />
               </div>
             </div>
             
@@ -106,7 +106,7 @@
                   <button class="btn text-white bg-btn-bike">Purchase</button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike2.png" class="w-[440px]" />
+                <img src="./images/slider/bike2.png" class="w-[440px]" />
               </div>
             </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -123,7 +123,7 @@
                   <button class="btn text-white bg-btn-bike">Purchase</button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike3.png" class="w-[440px]" />
+                <img src="./images/slider/bike3.png" class="w-[440px]" />
               </div>
             </div>
             <div class="absolute flex justify-between transform -translate-y-1/2 left-5 right-5 top-1/2">
@@ -140,7 +140,7 @@
                   <button class="btn text-white bg-btn-bike">Purchase</button>
               </div>
               <div class="flex-1">
-                <img src="/images/slider/bike4.png" class="w-[440px]" />
+                <img src="./images/slider/bike4.png" class="w-[440px]" />
               </div> 
             
             </div>
@@ -166,7 +166,7 @@
     <div class="grid gap-5 md:grid-cols-1 lg:grid-cols-3 mb-15 ">
       <div>
         <div class="card  bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest2.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest2.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Motorcycles & Scooters</h2>
             <p class="text[5px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -178,7 +178,7 @@
       </div>
       <div>
         <div class="card  bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest3.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">2021 Honda CBR500R</h2>
             <p class="text[5px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -190,7 +190,7 @@
       </div>
       <div>
         <div class="card bg-base-100 shadow-xl">
-          <figure><img src="/images/others/latest1.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/latest1.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title">Ducati XDIAVEL S-73</h2>
             <p class="text[5px]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacus, fermentum amet faucibus sed id nisi lectus at.</p>
@@ -232,7 +232,7 @@
           </div>
         </div>
         <div class="card  bg-base-100 shadow-xl p-9 border border-gray-400">
-          <figure><img src="/images/others/user-2.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/user-2.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title justify-center ">Tomas pol </h2>
             <p>Slate helps you see how 
@@ -252,7 +252,7 @@
           </div>
         </div>
         <div class="card  bg-base-100 shadow-xl p-9 border border-gray-400">
-          <figure><img src="/images/others/user-3.png" alt="Shoes" /></figure>
+          <figure><img src="./images/others/user-3.png" alt="Shoes" /></figure>
           <div class="card-body">
             <h2 class="card-title justify-center ">Tomas pol </h2>
             <p>Slate helps you see how 
@@ -281,7 +281,7 @@
       <h3 class="font-bold text-center text-7xl my-5"> Frequently <span class="text-btn-bike"> Asked Questions</span></h3>
       <div class="hero min-h-screen bg-base-200">
         <div class="hero-content flex-col lg:flex-row">
-          <img src="/images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
+          <img src="./images/others/faq.png" class="max-w-sm rounded-lg shadow-2xl" />
           <div>
             <div class="collapse collapse-arrow bg-base-200">
               <input type="radio" name="my-accordion-2" checked="checked" /> 
